# sunny-scheme

./: .gitignore  Cargo.toml  README.md  out.rs  test-libs.scm
bytecode/: foo.sbc
scm/: Cargo.toml
scm/src/: lexer.rs  lib.rs  parser.rs  sexpr_grammar.lalrpop  shared_string.rs  source_location.rs  source_map.rs  str_utils.rs
scm/src/scm/: bool.rs  bytevector.rs  char.rs  eof.rs  int.rs  interner.rs  mod.rs  mutable_pair.rs  null.rs  number.rs  pair.rs  sexpr_impls.rs  string.rs  symbol.rs  vector.rs  void.rs
sexpr-parser/: Cargo.toml
sexpr-parser/src/: lib.rs  parser.rs  scanner.rs  sexpr.rs  sexpr_grammar.lalrpop  source_location.rs
sexpr-parser/src/new_impls/: finite_automaton.rs  mod.rs  simple_regex.rs
sexpr-parser/src/new_impls/finite_automata/: deterministic.rs  mod.rs  nondeterministic.rs
sunny/: Cargo.toml
sunny-core/: Cargo.toml
sunny-core/src/: lib.rs  memory_model.rs  port.rs  string.rs  symbol.rs
sunny-libs-native/: Cargo.toml
sunny-libs-native/src/: lib.rs
sunny-libs-native/src/native/: base.rs  file.rs  filesystem.rs  mod.rs  process_context.rs  read.rs  write.rs
sunny-macro/: Cargo.toml
sunny-macro/src/: lib.rs
sunny-parse/: Cargo.toml
sunny-parse/src/: lib.rs
sunny-rustify/: Cargo.toml  bootstrap.sh  build.rs  scm2rs.scm  small.scm
sunny-rustify/lib/: syntax.sld
sunny-rustify/lib/sunny/: translate.sld
sunny-rustify/scheme/: run-tests.scm  scm2rs.scm  testsuite.scm
sunny-rustify/scheme/lib/: testsuite.sld
sunny-rustify/scheme/lib/sunny/: ast.sld  astify-toplevel.sld  astify.sld  env.sld  library.sld  scheme-syntax.sld  sets.sld  sexpr-ast.sld  syntax.sld  table.sld  testing.sld  translate.sld  utils.sld  variable.sld
sunny-rustify/scheme/lib/sunny/ast-transforms/: boxify.sld  close-procedures.sld  extract-definitions.sld  rename-vars.sld
sunny-rustify/scheme/lib/sunny/rust/: codegen.sld  module-tree.sld  module.sld  rustify.sld
sunny-rustify/src/: main.rs  scm2rs.rs
sunny-rustify/src/scm/: scm2rs.scm
sunny-rustify/src/scm2rs/: mod.rs
sunny-rustify/src/scm2rs/chibi/filesystem/: mod.rs
sunny-rustify/src/scm2rs/scheme/: mod.rs
sunny-rustify/src/scm2rs/scheme/base/: mod.rs
sunny-rustify/src/scm2rs/scheme/cxr/: mod.rs
sunny-rustify/src/scm2rs/scheme/file/: mod.rs
sunny-rustify/src/scm2rs/scheme/process_context/: mod.rs
sunny-rustify/src/scm2rs/scheme/read/: mod.rs
sunny-rustify/src/scm2rs/scheme/write/: mod.rs
sunny-rustify/src/scm2rs/sunny/: mod.rs
sunny-rustify/src/scm2rs/sunny/ast/: mod.rs
sunny-rustify/src/scm2rs/sunny/ast_transforms/: mod.rs
sunny-rustify/src/scm2rs/sunny/ast_transforms/boxify/: mod.rs
sunny-rustify/src/scm2rs/sunny/ast_transforms/close_procedures/: mod.rs
sunny-rustify/src/scm2rs/sunny/ast_transforms/extract_definitions/: mod.rs
sunny-rustify/src/scm2rs/sunny/ast_transforms/rename_vars/: mod.rs
sunny-rustify/src/scm2rs/sunny/astify/: mod.rs
sunny-rustify/src/scm2rs/sunny/astify_toplevel/: mod.rs
sunny-rustify/src/scm2rs/sunny/env/: mod.rs
sunny-rustify/src/scm2rs/sunny/rust/: mod.rs
sunny-rustify/src/scm2rs/sunny/rust/codegen/: mod.rs
sunny-rustify/src/scm2rs/sunny/rust/module/: mod.rs
sunny-rustify/src/scm2rs/sunny/scheme_syntax/: mod.rs
sunny-rustify/src/scm2rs/sunny/sets/: mod.rs
sunny-rustify/src/scm2rs/sunny/sexpr_ast/: mod.rs
sunny-rustify/src/scm2rs/sunny/syntax/: mod.rs
sunny-rustify/src/scm2rs/sunny/table/: mod.rs
sunny-rustify/src/scm2rs/sunny/translate/: mod.rs
sunny-rustify/src/scm2rs/sunny/utils/: mod.rs
sunny-rustify/src/scm2rs/sunny/variable/: mod.rs
sunny-rustify/src/scm2rs/testsuite/: mod.rs
sunny/src/: ast.rs  backend.rs  context.rs  filesystem.rs  frontend.rs  library_filesystem.rs  main.rs  stdlib.rs
sunny/src/builtin_libs/: hash_table.rs  macros.rs  mod.rs
sunny/src/frontend/: ast.rs  environment.rs  error.rs  frontend.rs  library.rs  mod.rs  syntactic_closure.rs  syntax_forms.rs
sunny/src/frontend/macros/: bindings.rs  mod.rs  pattern.rs  template.rs
sunny/src/language_tests/: constant_expressions.rs  control_features.rs  control_flow.rs  equivalence_predicates.rs  global_variables.rs  lexical_conventions.rs  libraries.rs  macros.rs  mod.rs  procedures.rs  program_structure.rs  scoping.rs  type_predicates.rs
vm/: Cargo.toml
vm/src/: activation.rs  basic_block.rs  bytecode.rs  bytecode_loader.rs  closure.rs  code.rs  continuation.rs  lib.rs  number.rs  opcode.rs  optimizations.rs  primitive.rs  record.rs  scm_extension.rs  storage.rs  table.rs  value.rs  vm.rs
vm/src/scm_extension/: mod.rs
(+64 files in other folders)
