[package]
name = "sunny-scm"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = "0.19"
logos = "0.12"
regex = "1"
sexpr-generics = {path = "../sexpr" }
