[package]
name = "sunny-sexpr-parser"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = "0.19"
regex = "1"
