[package]
name = "sunny-core"
version = "0.1.0"
authors = ["Martin Billinger <flkazemakase@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

leaking = ["scm_copy"]
scm_copy = []

[dependencies]
lazy_static = "1"
