[package]
name = "sunny-parse"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

[features]
default = []

leaking = ["sunny-core/leaking", "scm_copy"]
scm_copy = ["sunny-core/scm_copy"]

[dependencies]
lexpr = "0.2"
sunny-core = {path="../sunny-core"}
