[package]
name = "sunny"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.1"
sunny-vm = {path = "../vm"}
structopt = "0.3"