[package]
name = "sunny"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0"
log = "0.4"
rustyline = "7.1"
simple_logger = "1.11"
sunny-sexpr-parser = {path = "../sexpr-parser"}
sunny-vm = {path = "../vm"}
structopt = "0.3"

[dev-dependencies]
hamcrest2 = "0.3"
