[package]
name = "sunny"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log = "0.4"
maplit = "1.0"
project-root = "0.2"
rustyline = "7.1"
simple_logger = "1.11"
sexpr-generics = {path = "../sexpr" }
sunny-scm = {path = "../scm" }
sunny-vm = {path = "../vm"}
structopt = "0.3"
vfs = "0.5"

[dev-dependencies]
hamcrest2 = "0.3"
