[package]
name = "sunny-vm"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0"
sunny-memory = {path = "../memory"}
sunny-sexpr-parser = {path = "../sexpr" }